; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/websocket/extr_websocketclient.c_ws_closeSentCallback.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/websocket/extr_websocketclient.c_ws_closeSentCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.espconn = type { i64 }
%struct.TYPE_2__ = type { i32, i64 }

@.str = private unnamed_addr constant [23 x i8] c"ws_closeSentCallback \0A\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"ws is unexpectly null\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @ws_closeSentCallback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ws_closeSentCallback(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.espconn*, align 8
  %4 = alloca %struct.TYPE_2__*, align 8
  store i8* %0, i8** %2, align 8
  %5 = call i32 @NODE_DBG(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %6 = load i8*, i8** %2, align 8
  %7 = bitcast i8* %6 to %struct.espconn*
  store %struct.espconn* %7, %struct.espconn** %3, align 8
  %8 = load %struct.espconn*, %struct.espconn** %3, align 8
  %9 = getelementptr inbounds %struct.espconn, %struct.espconn* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %11, %struct.TYPE_2__** %4, align 8
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %13 = icmp eq %struct.TYPE_2__* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = call i32 @NODE_DBG(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  br label %29

16:                                               ; preds = %1
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  store i32 -6, i32* %18, align 8
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %16
  %24 = load %struct.espconn*, %struct.espconn** %3, align 8
  %25 = call i32 @espconn_secure_disconnect(%struct.espconn* %24)
  br label %29

26:                                               ; preds = %16
  %27 = load %struct.espconn*, %struct.espconn** %3, align 8
  %28 = call i32 @espconn_disconnect(%struct.espconn* %27)
  br label %29

29:                                               ; preds = %14, %26, %23
  ret void
}

declare dso_local i32 @NODE_DBG(i8*) #1

declare dso_local i32 @espconn_secure_disconnect(%struct.espconn*) #1

declare dso_local i32 @espconn_disconnect(%struct.espconn*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
